--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ sounddevice>=0.4.6
 simpleaudio>=1.0.4
 webrtcvad>=2.0.10
 numpy>=1.24.0
+wavesurfer>=0.3.8
 
 # TTS (Text-to-Speech)
 kokoro-tts>=0.1.0
