--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ simpleaudio>=1.0.4
 webrtcvad>=2.0.10
 numpy>=1.24.0
 wavesurfer>=0.3.8
+noisereduce>=3.0.0
 
 # TTS (Text-to-Speech)
 kokoro-tts>=0.1.0
